Fixed the issues in formatting and typos

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -109,19 +109,19 @@
 		 <li><a href="/file-formats/pdf/working-with-silverlight">Silverlight</a></li>
 		 <li><a href="/file-formats/pdf/working-with-winrt">WinRT</a></li>
 		 <li><a href="/file-formats/pdf/working-with-windows-phone">Windows Phone</a></li>
-		 <li><a href="/file-formats/pdf/working-with-xamarin">XAMARIN</a></li>
+		 <li><a href="/file-formats/pdf/working-with-xamarin">Xamarin</a></li>
          <li><a href="/file-formats/pdf/working-with-document">Working with Document</a></li>
          <li><a href="/file-formats/pdf/working-with-pages">Working with Pages</a></li>
          <li><a href="/file-formats/pdf/working-with-text">Working with Text</a></li>
          <li><a href="/file-formats/pdf/working-with-images">Working with Images</a></li>
          <li><a href="/file-formats/pdf/working-with-tables">Working with Tables</a></li>
-         <li><a href="/file-formats/pdf/working-with-forms">Working with forms</a></li>
+         <li><a href="/file-formats/pdf/working-with-forms">Working with Forms</a></li>
 		 <li><a href="/file-formats/pdf/merge-documents">Merge Documents</a></li>
 		 <li><a href="/file-formats/pdf/working-with-text-extraction">Working with Text Extraction</a></li>
 		 <li><a href="/file-formats/pdf/working-with-image-extraction">Working with Image Extraction</a></li>
 		 <li><a href="/file-formats/pdf/Working-with-Document-Conversions">Working with Document Conversions</a></li>
 		 <li><a href="/file-formats/pdf/working-with-ocr">Working with OCR</a></li>
-		 <li><a href="/file-formats/pdf/working-with-hyperlinks">Working with HyperLinks</a></li>
+		 <li><a href="/file-formats/pdf/working-with-hyperlinks">Working with Hyperlinks</a></li>
          <li><a href="/file-formats/pdf/working-with-pdf-templates">Working with PDF Templates</a></li>
 		 <li><a href="/file-formats/pdf/Working-with-Headers-and-Footers">Working with Headers and Footers</a></li>
 		 <li><a href="/file-formats/pdf/working-with-shapes">Working with Shapes</a></li>
@@ -129,9 +129,9 @@
          <li><a href="/file-formats/pdf/working-with-annotations">Working with Annotations</a></li>
          <li><a href="/file-formats/pdf/working-with-attachments">Working with Attachments</a></li>
 		 <li><a href="/file-formats/pdf/working-with-security">Working with Security</a></li>
-		 <li><a href="/file-formats/pdf/working-with-digitalsignature">Working with DigitalSignature</a></li>
-		 <li><a href="/file-formats/pdf/working-with-barcode">Working with barcode</a></li>
-		 <li><a href="/file-formats/pdf/working-with-action">Working with action</a></li>
+		 <li><a href="/file-formats/pdf/working-with-digitalsignature">Working with Digital Signature</a></li>
+		 <li><a href="/file-formats/pdf/working-with-barcode">Working with Barcode</a></li>
+		 <li><a href="/file-formats/pdf/working-with-action">Working with Actions</a></li>
 		 <li><a href="/file-formats/pdf/working-with-watermarks">Working with Watermarks</a></li>
 		 <li><a href="/file-formats/pdf/working-with-portfolio">Working with Portfolio</a></li>
 		 <li><a href="/file-formats/pdf/working-with-layers">Working with Layers</a></li>
@@ -139,7 +139,7 @@
          <li><a href="/file-formats/pdf/working-with-compression">Working with Compression</a></li>
 		 <li><a href="/file-formats/pdf/working-with-pdf-conformance">Working with PDF Conformance</a></li>
          <li><a href="/file-formats/pdf/working-with-metadata">Working with Metadata</a></li>
-         <li><a href="/file-formats/pdf/working-with-colorspace">Working with Colorspace</a></li>
+         <li><a href="/file-formats/pdf/working-with-colorspace">Working with Color Spaces</a></li>
 		 <li><a href="/file-formats/pdf/Supported-and-Unsupported-Features">Supported and Unsupported Features</a></li>
       </ul>
    </li>
