Fixed the issues with Presentation UG documentation

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -159,10 +159,10 @@
 				<a href="/file-formats/Presentation/Loading-and-Saving-the-Presentation">Loading and saving Presentation</a>
 			</li>			
 			<li>
-				<a href="/file-formats/Presentation/ASP.NET">ASP.NET</a>
+				<a href="/file-formats/Presentation/ASP-NET">ASP.NET</a>
 			</li>
 			<li>
-				<a href="/file-formats/Presentation/ASP.NET-MVC">ASP.NET MVC</a>
+				<a href="/file-formats/Presentation/ASP-NET-MVC">ASP.NET MVC</a>
 			</li>
 			<li>
 				<a href="/file-formats/Presentation/Working-with-PowerPoint-presentation">Working with Presentation</a>
