Fixed the casing changes in DocIO Removed the Tips page (Presentation) from TOC

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -16,10 +16,10 @@
 				<a href="/file-formats/DocIO/Loading-and-Saving-document">Loading and Saving document</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/ASP.NET">ASP.NET</a>
+				<a href="/file-formats/DocIO/ASP-NET">ASP.NET</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/ASP.NET-MVC">ASP.NET MVC</a>
+				<a href="/file-formats/DocIO/ASP-NET-MVC">ASP.NET MVC</a>
 			</li>
 			<li>
 				<a href="/file-formats/DocIO/Silverlight">Silverlight</a>
@@ -193,9 +193,6 @@
 			</li>
 			<li>
 				<a href="/file-formats/Presentation/Conversion">Conversion</a>
-			</li>
-			<li>
-				<a href="/file-formats/Presentation/Tips">Tips</a>
 			</li>
 			<li>
 				<a href="/file-formats/Presentation/FAQ">FAQ</a>
