--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -189,6 +189,9 @@
 				<a href="/file-formats/Presentation/Working-with-Charts">Working with Charts</a>
 			</li>
 			<li>
+				<a href="/file-formats/Presentation/SmartArt">Working with SmartArt</a>
+			</li>
+			<li>
 				<a href="/file-formats/Presentation/Security">Security</a>
 			</li>
 			<li>
