File-Formats-toc.html edited online with Bitbucket

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -233,5 +233,11 @@
 		 <li><a href="/file-formats/xlsio/improving-performance">Improving Performance</a></li>
 		 <li><a href="/file-formats/xlsio/faq">FAQ</a></li>
       </ul>
-    </li>	
+    </li>
+	<li>
+      Release Notes
+      <ul>
+         <li><a href="/file-formats/release-notes/v13.4.0.53">v13.4.0.53</a></li>
+	  </ul>
+	</li>
 </ul>
