--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -10,6 +10,9 @@
 				<a href="/file-formats/DocIO/Getting-Started">Getting Started</a>
 			</li>
 			<li>
+				<a href="/file-formats/DocIO/Assemblies-Required">Assemblies-Required</a>
+			</li>
+			<li>
 				<a href="/file-formats/DocIO/Document-Object-Model-representation">Document Object Model representation</a>
 			</li>
 			<li>
