Included the files  and updated the order

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -106,6 +106,7 @@
       <ul>
          <li><a href="/file-formats/pdf/overview">Overview</a></li>
          <li><a href="/file-formats/pdf/getting-started">Getting Started</a></li>
+		 <li><a href="/file-formats/pdf/Assemblies-Required">Assemblies Required</a></li>
 		 <li><a href="/file-formats/pdf/Loading-and-Saving-document">Loading and Saving Document</a></li>
 		 <li><a href="/file-formats/pdf/working-with-asp">ASP.NET</a></li>
 		 <li><a href="/file-formats/pdf/working-with-mvc">ASP.NET MVC</a></li>
@@ -118,6 +119,7 @@
          <li><a href="/file-formats/pdf/working-with-text">Working with Text</a></li>
          <li><a href="/file-formats/pdf/working-with-images">Working with Images</a></li>
          <li><a href="/file-formats/pdf/working-with-tables">Working with Tables</a></li>
+		 <li><a href="/file-formats/pdf/working-with-flow-layout">Working with Flow Layout</a></li>
          <li><a href="/file-formats/pdf/working-with-forms">Working with Forms</a></li>
 		 <li><a href="/file-formats/pdf/merge-documents">Merge Documents</a></li>
 		 <li><a href="/file-formats/pdf/working-with-text-extraction">Working with Text Extraction</a></li>
