File-Formats-toc.html edited online with Bitbucket

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ul class="treeview">
+<li>
+<a href="cr/file-formats" target="_blank">API Reference</a>
+</li>
 	<li>
       DocIO
 		<ul>
