--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -160,6 +160,9 @@
 			<li>
 				<a href="/file-formats/Presentation/Getting-Started">Getting Started</a>
 			</li>
+		    <li>
+				<a href="/file-formats/Presentation/Assemblies-Required">Assemblies Required</a>
+			</li>
 			<li>
 				<a href="/file-formats/Presentation/Document-Object-Model">Document Object Model</a>
 			</li>
