--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -7,11 +7,11 @@
 				<a href="/file-formats/DocIO/Overview">Overview</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Getting-Started">Getting Started</a>
+				<a href="/file-formats/DocIO/Assemblies-Required">Assemblies Required</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Assemblies-Required">Assemblies-Required</a>
-			</li>
+				<a href="/file-formats/DocIO/Getting-Started">Getting Started</a>
+			</li>			
 			<li>
 				<a href="/file-formats/DocIO/Document-Object-Model-representation">Document Object Model representation</a>
 			</li>
