--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ul class="treeview">
 <li>
-<a href="cr/file-formats" target="_blank">API Reference</a>
+<a href="/cr/file-formats" target="_blank">API Reference</a>
 </li>
 	<li>
       DocIO
