--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -252,6 +252,7 @@
 	<li>
       Release Notes
       <ul>
+	  	 <li><a href="/file-formats/release-notes/v14.1.0.41">v14.1.0.41</a></li>
 	     <li><a href="/file-formats/release-notes/v13.4.0.63">v13.4.0.63</a></li>
 	     <li><a href="/file-formats/release-notes/v13.4.0.58">v13.4.0.58</a></li>
          <li><a href="/file-formats/release-notes/v13.4.0.53">v13.4.0.53</a></li>
