--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -206,7 +206,7 @@
 				<a href="/file-formats/Presentation/Working-with-Charts">Working with Charts</a>
 			</li>
 			<li>
-				<a href="/file-formats/Presentation/Working-with-NotesSlide">Working with Notes Slide</a>
+				<a href="/file-formats/Presentation/Working-with-NotesSlide">Working with Notes</a>
 			</li>
 			<li>
 				<a href="/file-formats/Presentation/SmartArt">Working with SmartArts</a>
