Added the documentation for named destination feature

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -134,6 +134,7 @@
 		 <li><a href="/file-formats/pdf/Working-with-Headers-and-Footers">Working with Headers and Footers</a></li>
 		 <li><a href="/file-formats/pdf/working-with-shapes">Working with Shapes</a></li>
          <li><a href="/file-formats/pdf/working-with-bookmarks">Working with Bookmarks</a></li>
+		 <li><a href="/file-formats/pdf/Working-with-Named-Destination">Working with Named-Destination</a></li>
          <li><a href="/file-formats/pdf/working-with-annotations">Working with Annotations</a></li>
          <li><a href="/file-formats/pdf/working-with-attachments">Working with Attachments</a></li>
 		 <li><a href="/file-formats/pdf/working-with-security">Working with Security</a></li>
