--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -264,6 +264,7 @@
 	<li>
       Release Notes
       <ul>
+	     <li><a href="/file-formats/release-notes/14.2.0.xx">14.2.0.xx</a></li>
 		 <li><a href="/file-formats/release-notes/v14.1.0.46">v14.1.0.46</a></li>
 	  	 <li><a href="/file-formats/release-notes/v14.1.0.41">v14.1.0.41</a></li>
 	     <li><a href="/file-formats/release-notes/v13.4.0.63">v13.4.0.63</a></li>
