--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -264,7 +264,7 @@
 	<li>
       Release Notes
       <ul>
-	     <li><a href="/file-formats/release-notes/vv14.2.0.26">vv14.2.0.26</a></li>
+	     <li><a href="/file-formats/release-notes/v14.2.0.26">v14.2.0.26</a></li>
 		 <li><a href="/file-formats/release-notes/v14.1.0.46">v14.1.0.46</a></li>
 	  	 <li><a href="/file-formats/release-notes/v14.1.0.41">v14.1.0.41</a></li>
 	     <li><a href="/file-formats/release-notes/v13.4.0.63">v13.4.0.63</a></li>
