--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -270,6 +270,7 @@
 	     <li><a href="/file-formats/release-notes/v13.4.0.63">v13.4.0.63</a></li>
 	     <li><a href="/file-formats/release-notes/v13.4.0.58">v13.4.0.58</a></li>
          <li><a href="/file-formats/release-notes/v13.4.0.53">v13.4.0.53</a></li>
+		  <li><a href="/file-formats/release-notes/v14.1.0.xx">v14.1.0.xx</a></li>
 	  </ul>
 	</li>
 </ul>
