--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -161,6 +161,9 @@
             <li>
                 <a href="/file-formats/Presentation/Assemblies-Required">Assemblies Required</a>
             </li>
+			<li>
+                <a href="/file-formats/Presentation/NuGet-Packages-Required">NuGet Packages Required</a>
+            </li>
             <li>
                 <a href="/file-formats/Presentation/Getting-Started">Getting Started</a>
             </li>
