--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -267,6 +267,7 @@
     <li>
         Release Notes
         <ul>
+		    <li><a href="/file-formats/release-notes/v14.3.x.x">v14.3.x.x</a></li>
             <li><a href="/file-formats/release-notes/v14.3.0.49">v14.3.0.49</a></li>
             <li><a href="/file-formats/release-notes/v14.2.0.32">v14.2.0.32</a></li>
             <li><a href="/file-formats/release-notes/v14.2.0.28">v14.2.0.28</a></li>
