Add documentation for working with OLE objects using Presentation library

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -209,6 +209,9 @@
             <li>
                 <a href="/file-formats/Presentation/Working-with-Charts">Working with Charts</a>
             </li>
+			<li>
+                <a href="/file-formats/Presentation/Working-with-OLE-Objects">Working with OLE Objects</a>
+            </li>
             <li>
                 <a href="/file-formats/Presentation/Working-with-NotesSlide">Working with Notes</a>
             </li>
