--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -262,7 +262,7 @@
             <li><a href="/file-formats/xlsio/working-with-pivot-charts">Working with Pivot Charts</a></li>
             <li><a href="/file-formats/xlsio/security">Security</a></li>
             <li><a href="/file-formats/xlsio/working-with-drawing-objects">Working with Drawing Objects</a></li>
-			<li><a href="/file-formats/xlsio/excel-to-pdf-conversion">Excel to PDFÂ Conversion</a></li>
+			<li><a href="/file-formats/xlsio/excel-to-pdf-conversion">Excel to PDF Conversion</a></li>
 			<li><a href="/file-formats/xlsio/worksheet-to-image-conversion">Worksheet to Image Conversion</a></li>
 			<li><a href="/file-formats/xlsio/chart-to-image-conversion">Chart to Image Conversion</a></li>
 			<li><a href="/file-formats/xlsio/excel-to-ods-conversion">Excel to ODS Conversion</a></li>
@@ -275,6 +275,7 @@
     <li>
         Release Notes
         <ul>
+            <li><a href="/file-formats/release-notes/v14.4.x.x">v14.4.x.x</a></li>
 		    <li><a href="/file-formats/release-notes/v14.3.0.52">v14.3.0.52</a></li>
             <li><a href="/file-formats/release-notes/v14.3.0.49">v14.3.0.49</a></li>
             <li><a href="/file-formats/release-notes/v14.2.0.32">v14.2.0.32</a></li>
