EJWEB_5392, WF_34333 - UG documentation for POTX, PPTM, POTM file format support and groupshapes.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -219,6 +219,9 @@
             <li>
                 <a href="/file-formats/Presentation/SmartArt">Working with SmartArts</a>
             </li>
+			<li>
+                <a href="/file-formats/Presentation/Working-with-Macros">Working with Macros</a>
+            </li>
             <li>
                 <a href="/file-formats/Presentation/Security">Security</a>
             </li>
