--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -219,6 +219,9 @@
             <li>
                 <a href="/file-formats/Presentation/SmartArt">Working with SmartArts</a>
             </li>
+			<li>
+                <a href="/file-formats/Presentation/Working-with-sections">Working with Sections</a>
+            </li>
             <li>
                 <a href="/file-formats/Presentation/Security">Security</a>
             </li>
