DOCINFRA-1205 entry for release notes of 2017 vol 1 SP1 is added in toc

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -281,6 +281,7 @@
     <li>
         Release Notes
         <ul>
+		    <li><a href="/file-formats/release-notes/v15.1.0.x">v15.1.0.x</a></li>
 		    <li><a href="/file-formats/release-notes/v15.1.0.33">v15.1.0.33</a></li>
 		    <li><a href="/file-formats/release-notes/v14.4.0.20">v14.4.0.20</a></li>
             <li><a href="/file-formats/release-notes/v14.4.0.15">v14.4.0.15</a></li>
