--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -281,6 +281,7 @@
     <li>
         Release Notes
         <ul>
+		    <li><a href="/file-formats/release-notes/v15.1.0.37">v15.1.0.37</a></li>
 		    <li><a href="/file-formats/release-notes/v15.1.0.33">v15.1.0.33</a></li>
 		    <li><a href="/file-formats/release-notes/v14.4.0.20">v14.4.0.20</a></li>
             <li><a href="/file-formats/release-notes/v14.4.0.15">v14.4.0.15</a></li>
