--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -116,6 +116,7 @@
             <li><a href="/file-formats/pdf/working-with-silverlight">Silverlight</a></li>
             <li><a href="/file-formats/pdf/working-with-winrt">WinRT</a></li>
             <li><a href="/file-formats/pdf/working-with-windows-phone">Windows Phone</a></li>
+			<li><a href="/file-formats/pdf/UWP">UWP</a></li>
             <li><a href="/file-formats/pdf/working-with-xamarin">Xamarin</a></li>
             <li><a href="/file-formats/pdf/working-with-document">Working with Document</a></li>
             <li><a href="/file-formats/pdf/working-with-pages">Working with Pages</a></li>
