DOCINFRA-1243 release notes entry for 2017 volume 2 added in TOC file

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -282,6 +282,7 @@
     <li>
         Release Notes
         <ul>
+		    <li><a href="/file-formats/release-notes/v15.2.0.x">v15.2.0.x</a></li>
 		    <li><a href="/file-formats/release-notes/v15.1.0.41">v15.1.0.41</a></li>
 		    <li><a href="/file-formats/release-notes/v15.1.0.37">v15.1.0.37</a></li>
 		    <li><a href="/file-formats/release-notes/v15.1.0.33">v15.1.0.33</a></li>
