EJDOTNETCORE-521 - Updated the UG documentation of Presentation library for ASP.NET Core platfrom

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -187,6 +187,9 @@
             <li>
                 <a href="/file-formats/Presentation/Xamarin">Xamarin</a>
             </li>
+			<li>
+                <a href="/file-formats/Presentation/aspnetcore">ASP.NET Core</a>
+            </li>
             <li>
                 <a href="/file-formats/Presentation/Working-with-PowerPoint-presentation">Working with Presentation</a>
             </li>
