--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -286,6 +286,7 @@
     <li>
         Release Notes
         <ul>
+		    <li><a href="/file-formats/release-notes/v15.2.0.43">v15.2.0.43</a></li>
 		    <li><a href="/file-formats/release-notes/v15.2.0.40">v15.2.0.40</a></li>
 		    <li><a href="/file-formats/release-notes/v15.1.0.41">v15.1.0.41</a></li>
 		    <li><a href="/file-formats/release-notes/v15.1.0.37">v15.1.0.37</a></li>
