Added new UG section for HTML conversion

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -129,6 +129,7 @@
             <li><a href="/file-formats/pdf/merge-documents">Merge Documents</a></li>
             <li><a href="/file-formats/pdf/working-with-text-extraction">Working with Text Extraction</a></li>
             <li><a href="/file-formats/pdf/working-with-image-extraction">Working with Image Extraction</a></li>
+			<li><a href="/file-formats/pdf/Working-with-HTML-Conversion">Working with HTML Conversion</a></li>
             <li><a href="/file-formats/pdf/Working-with-Document-Conversions">Working with Document Conversions</a></li>
             <li><a href="/file-formats/pdf/working-with-ocr">Working with OCR</a></li>
             <li><a href="/file-formats/pdf/working-with-hyperlinks">Working with Hyperlinks</a></li>
