DOCINFRA-1343-Release Notes for 2017 Volume 2 - Service Pack 2 for File Formats has been committed

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -287,6 +287,7 @@
     <li>
         Release Notes
         <ul>
+		    <li><a href="/file-formats/release-notes/v15.2.0.46">v15.2.0.46</a></li>
 		    <li><a href="/file-formats/release-notes/v15.2.0.43">v15.2.0.43</a></li>
 		    <li><a href="/file-formats/release-notes/v15.2.0.40">v15.2.0.40</a></li>
 		    <li><a href="/file-formats/release-notes/v15.1.0.41">v15.1.0.41</a></li>
