--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -152,6 +152,7 @@
             <li><a href="/file-formats/pdf/working-with-pdf-conformance">Working with PDF Conformance</a></li>
             <li><a href="/file-formats/pdf/working-with-metadata">Working with Metadata</a></li>
             <li><a href="/file-formats/pdf/working-with-colorspace">Working with Color Spaces</a></li>
+			<li><a href="/file-formats/pdf/working-in-multi-threading-environment">Working in Multi-Threading Environment</a></li>
             <li><a href="/file-formats/pdf/Supported-and-Unsupported-Features">Supported and Unsupported Features</a></li>
         </ul>
     </li>
