Updated the Presentation UG documentation

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -174,7 +174,7 @@
                 <a href="/file-formats/Presentation/Document-Object-Model">Document Object Model</a>
             </li>
             <li>
-                <a href="/file-formats/Presentation/Loading-and-Saving-the-Presentation">Loading and saving Presentation</a>
+                <a href="/file-formats/Presentation/Loading-and-Saving-the-Presentation">Loading and Saving Presentation</a>
             </li>
             <li>
                 <a href="/file-formats/Presentation/ASP-NET">ASP.NET</a>
