--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -287,6 +287,7 @@
     <li>
         Release Notes
         <ul>
+		    <li><a href="/file-formats/release-notes/v15.3.0.29">v15.3.0.29</a></li>
 		    <li><a href="/file-formats/release-notes/v15.3.0.26">v15.3.0.26</a></li>
 		    <li><a href="/file-formats/release-notes/v15.2.0.46">v15.2.0.46</a></li>
 		    <li><a href="/file-formats/release-notes/v15.2.0.43">v15.2.0.43</a></li>
