--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -247,6 +247,7 @@
         <ul>
             <li><a href="/file-formats/xlsio/overview">Overview</a></li>
             <li><a href="/file-formats/xlsio/assemblies-required">Assemblies Required</a></li>
+			<li><a href="/file-formats/xlsio/NuGet-Packages-Required">NuGet Packages Required</a></li>
             <li><a href="/file-formats/xlsio/getting-started">Getting Started</a></li>
             <li><a href="/file-formats/xlsio/loading-and-saving-workbook">Loading and Saving Workbook</a></li>
             <li><a href="/file-formats/xlsio/asp-net">ASP.NET</a></li>
