--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -288,6 +288,7 @@
     <li>
         Release Notes
         <ul>
+		    <li><a href="/file-formats/release-notes/v15.4.0.x">v15.4.0.x</a></li>
 		    <li><a href="/file-formats/release-notes/v15.3.0.33">v15.3.0.33</a></li>
 		    <li><a href="/file-formats/release-notes/v15.3.0.29">v15.3.0.29</a></li>
 		    <li><a href="/file-formats/release-notes/v15.3.0.26">v15.3.0.26</a></li>
