--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -223,7 +223,10 @@
             </li>
             <li>
                 <a href="/file-formats/Presentation/SmartArt">Working with SmartArts</a>
-            </li>	
+            </li>
+			<li>
+                <a href="/file-formats/Presentation/Comments">Working with Comments</a>
+            </li>			
 			<li>
                 <a href="/file-formats/Presentation/Working-with-sections">Working with Sections</a>
             </li>
