DOCINFRA-1502-Release Notes for 2017 Volume 4 for File Format TOC has been committed.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -291,7 +291,7 @@
     <li>
         Release Notes
         <ul>
-		    <li><a href="/file-formats/release-notes/v15.4.0.x">v15.4.0.x</a></li>
+		    <li><a href="/file-formats/release-notes/v15.4.0.17">v15.4.0.17</a></li>
 		    <li><a href="/file-formats/release-notes/v15.3.0.33">v15.3.0.33</a></li>
 		    <li><a href="/file-formats/release-notes/v15.3.0.29">v15.3.0.29</a></li>
 		    <li><a href="/file-formats/release-notes/v15.3.0.26">v15.3.0.26</a></li>
