--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -285,7 +285,7 @@
             <li><a href="/file-formats/xlsio/supported-features-by-file-formats">Supported Features by File Formats</a></li>
 			<li><a href="/file-formats/xlsio/supported-features-by-platforms">Supported Features by Platforms</a></li>
             <li><a href="/file-formats/xlsio/improving-performance">Improving Performance</a></li>
-			<li><a href="/file-formats/xlsio/Known Exceptions">Known Exceptions</a></li>
+			<li><a href="/file-formats/xlsio/known-exceptions">Known Exceptions</a></li>
             <li><a href="/file-formats/xlsio/faq">FAQ</a></li>
         </ul>
     </li>
