--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -292,6 +292,7 @@
     <li>
         Release Notes
         <ul>
+		    <li><a href="/file-formats/release-notes/v15.4.0.20">v15.4.0.20</a></li>
 		    <li><a href="/file-formats/release-notes/v15.4.0.17">v15.4.0.17</a></li>
 		    <li><a href="/file-formats/release-notes/v15.3.0.33">v15.3.0.33</a></li>
 		    <li><a href="/file-formats/release-notes/v15.3.0.29">v15.3.0.29</a></li>
