Committed the changes.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -292,9 +292,9 @@
     <li>
         Release Notes
         <ul>
-		    <li><a href="/file-formats/release-notes/v16.1.x.x">v16.1.x.x</a> 
+		    <li><a href="/file-formats/release-notes/v16.1.x.x">v16.1.0.24</a> 
 		        <ul>
-                    <li><a href="/file-formats/Release-notes/migratingtov16.1.0.x">Migrating to v16.1.0.x</a></li>
+                    <li><a href="/file-formats/Release-notes/migratingtov16.1.0.x">Migrating to 16.1.0.24</a></li>
                 </ul>
             </li>
 		    <li><a href="/file-formats/release-notes/v15.4.0.20">v15.4.0.20</a></li>
