Updated the UG documentation for UWP Slide to image conversion suport

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -237,7 +237,10 @@
                 <a href="/file-formats/Presentation/Security">Security</a>
             </li>
             <li>
-                <a href="/file-formats/Presentation/Conversion">Conversion</a>
+                <a href="/file-formats/Presentation/Presentation-to-image">Presentation to image conversion </a>
+            </li>
+			<li>
+                <a href="/file-formats/Presentation/Presentation-to-PDF">Presentation to PDF conversion</a>
             </li>
             <li><a href="/file-formats/Presentation/Supported-and-Unsupported-Features">Supported and Unsupported Features</a></li>
             <li>
