--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -295,6 +295,7 @@
     <li>
         Release Notes
         <ul>
+		    <li><a href="/file-formats/release-notes/v16.1.0.26">v16.1.0.26</a></li>  
 		    <li><a href="/file-formats/release-notes/v16.1.0.24">v16.1.0.24</a> 
 		        <ul>
                     <li><a href="/file-formats/Release-notes/migratingtov16.1.0.24">Migrating to v16.1.0.24</a></li>
