Update NuGet Packages Structure for File Formats Platform

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -6,6 +6,9 @@
 	<li>
 		<a href="/file-formats/system-requirements">System Requirements</a>
     </li>
+	<li>
+		<a href="/file-formats/nuget-packages">NuGet Packages</a>
+    </li>
     <li>
         DocIO
         <ul>
