WF-38746 - Added information about Nuget package and installation procedure in UG documentation.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -15,6 +15,9 @@
             <li>
                 <a href="/file-formats/DocIO/Assemblies-Required">Assemblies Required</a>
             </li>
+			<li>
+                <a href="/file-formats/DocIO/NuGet-Packages-Required">NuGet Packages Required</a>
+            </li>
             <li>
                 <a href="/file-formats/DocIO/Getting-Started">Getting Started</a>
             </li>
