--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -105,6 +105,30 @@
             <li>
                 <a href="/file-formats/DocIO/Conversion">Working with Document Conversion</a>
             </li>
+			<li>
+                <a href="/file-formats/DocIO/Word-Conversion">Word conversions</a>
+            </li>
+			<li>
+                <a href="/file-formats/DocIO/word-native">Word Document native conversions</a>
+            </li>
+			<li>
+                <a href="/file-formats/DocIO/word-to-pdf">Word Document to PDF</a>
+            </li>
+			<li>
+                <a href="/file-formats/DocIO/word-to-image">Word Document to Image</a>
+            </li>
+			<li>
+                <a href="/file-formats/DocIO/word-to-txt">Text conversions</a>
+            </li>
+			<li>
+                <a href="/file-formats/DocIO/word-to-html">HTML conversions</a>
+            </li>
+			<li>
+                <a href="/file-formats/DocIO/word-to-odt">Word Document to ODT conversions</a>
+            </li>
+			<li>
+                <a href="/file-formats/DocIO/word-to-epub">Word Document to EPUB conversions</a>
+            </li>
             <li>
                 <a href="/file-formats/DocIO/Supported-and-Unsupported-Features">Supported and Unsupported Features</a>
             </li>
