WF-31580 - Revamped and added documents for conversions

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -106,10 +106,7 @@
                 <a href="/file-formats/DocIO/Conversion">Working with Document Conversion</a>
             </li>
 			<li>
-                <a href="/file-formats/DocIO/Word-Conversion">Word conversions</a>
-            </li>
-			<li>
-                <a href="/file-formats/DocIO/word-native">Word Document native conversions</a>
+                <a href="/file-formats/DocIO/word-document-conversion">Word Document Conversions</a>
             </li>
 			<li>
                 <a href="/file-formats/DocIO/word-to-pdf">Word Document to PDF</a>
@@ -118,10 +115,13 @@
                 <a href="/file-formats/DocIO/word-to-image">Word Document to Image</a>
             </li>
 			<li>
-                <a href="/file-formats/DocIO/word-to-txt">Text conversions</a>
+                <a href="/file-formats/DocIO/rtf">RTF conversions</a>
             </li>
 			<li>
-                <a href="/file-formats/DocIO/word-to-html">HTML conversions</a>
+                <a href="/file-formats/DocIO/text">Text conversions</a>
+            </li>
+			<li>
+                <a href="/file-formats/DocIO/html">HTML conversions</a>
             </li>
 			<li>
                 <a href="/file-formats/DocIO/word-to-odt">Word Document to ODT conversions</a>
