Addressed the feedbacks and updated contents.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -106,7 +106,7 @@
                 <a href="/file-formats/DocIO/Conversion">Working with Document Conversion</a>
             </li>
 			<li>
-                <a href="/file-formats/DocIO/word-document-conversion">Word File Format Conversions</a>
+                <a href="/file-formats/DocIO/word-file-formats">Word File Formats</a>
             </li>
 			<li>
                 <a href="/file-formats/DocIO/word-to-pdf">Word Document to PDF</a>
