--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -328,6 +328,7 @@
     <li>
         Release Notes
         <ul>
+        <li><a href="/file-formats/release-notes/v16.1.0.37">v16.1.0.37</a></li>  
 		<li><a href="/file-formats/release-notes/v16.1.0.32">v16.1.0.32</a></li>  
 		    <li><a href="/file-formats/release-notes/v16.1.0.26">v16.1.0.26</a></li>  
 		    <li><a href="/file-formats/release-notes/v16.1.0.24">v16.1.0.24</a> 
