--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -100,6 +100,9 @@
                 <a href="/file-formats/DocIO/Working-with-Macros">Working with Macros</a>
             </li>
             <li>
+                <a href="/file-formats/DocIO/Working-With-Content-Controls">Working With Content Controls</a>
+            </li>
+            <li>
                 <a href="/file-formats/DocIO/Accepting-or-Rejecting-Track-Changes">Accepting or Rejecting Track Changes</a>
             </li>
             <li>
