--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -100,13 +100,16 @@
                 <a href="/file-formats/DocIO/Working-with-Macros">Working with Macros</a>
             </li>
             <li>
+                <a href="/file-formats/DocIO/Working-With-Content-Controls">Working With Content Controls</a>
+            </li>
+            <li>
                 <a href="/file-formats/DocIO/Accepting-or-Rejecting-Track-Changes">Accepting or Rejecting Track Changes</a>
             </li>
             <li>
                 <a href="/file-formats/DocIO/Conversion">Working with Document Conversion</a>
             </li>
 			<li>
-                <a href="/file-formats/DocIO/word-document-conversion">Word Document Conversions</a>
+                <a href="/file-formats/DocIO/word-file-formats">Word File Formats</a>
             </li>
 			<li>
                 <a href="/file-formats/DocIO/word-to-pdf">Word Document to PDF</a>
@@ -328,6 +331,7 @@
     <li>
         Release Notes
         <ul>
+        <li><a href="/file-formats/release-notes/v16.1.0.37">v16.1.0.37</a></li>  
 		<li><a href="/file-formats/release-notes/v16.1.0.32">v16.1.0.32</a></li>  
 		    <li><a href="/file-formats/release-notes/v16.1.0.26">v16.1.0.26</a></li>  
 		    <li><a href="/file-formats/release-notes/v16.1.0.24">v16.1.0.24</a> 
