WF-44257 - Updated the UG documentation for Animation

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -255,7 +255,7 @@
                 <a href="/file-formats/Presentation/Working-with-Charts">Working with Charts</a>
             </li>
 			<li>
-                <a href="/file-formats/Presentation/Working-with-OLE-Objects">Working with OLE Objects</a>
+                <a href="/file-formats/Presentation/Working-with-Animation">Working with Animation</a>
             </li>
             <li>
                 <a href="/file-formats/Presentation/Working-with-NotesSlide">Working with Notes</a>
@@ -275,11 +275,14 @@
             <li>
                 <a href="/file-formats/Presentation/Security">Security</a>
             </li>
+			<li>
+                <a href="/file-formats/Presentation/Working-with-OLE-Objects">Working with OLE Objects</a>
+            </li>
             <li>
-                <a href="/file-formats/Presentation/Presentation-to-image">Presentation to image conversion </a>
+                <a href="/file-formats/Presentation/Presentation-to-image">PPTX to image conversion </a>
             </li>
 			<li>
-                <a href="/file-formats/Presentation/Presentation-to-PDF">Presentation to PDF conversion</a>
+                <a href="/file-formats/Presentation/Presentation-to-PDF">PPTX to PDF conversion</a>
             </li>
             <li><a href="/file-formats/Presentation/Supported-and-Unsupported-Features">Supported and Unsupported Features</a></li>
             <li>
