--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -6,20 +6,20 @@
     <li>
         <a href="/file-formats/introduction">Introduction</a>
     </li>
-	<li><a href="/file-formats/installation-and-deployment/System-Requirements">System Requirement</a>
+	<li><a href="/file-formats/installation-and-upgrade/System-Requirements">System Requirements</a>
     </li>
 	<li>
-	    <a href="/file-formats/installation-and-deployment/download">Download</a>
+	    <a href="/file-formats/installation-and-upgrade/download">Download</a>
 	</li>
 	<li>
        Installation and Upgrade
 	    <ul>
-		    <li><a href="/file-formats/installation-and-deployment/install-using-the-web-installer ">Install using the Web Installer</a></li>			
-		    <li><a href="/file-formats/installation-and-deployment/install-using-the-offline-installer ">Install using the Offline Installer</a></li>
-			<li><a href="/file-formats/installation-and-deployment/installation-faq ">Installation FAQ</a></li>
-			<li><a href="/file-formats/installation-and-deployment/upgrade-from-one-version-to-another-version">Upgrade from one version to another version</a></li>
-			<li><a href="/file-formats/installation-and-deployment/upgrade-from-major-version-to-service-pack-version">Upgrade from major version to service pack version</a></li>
-			<li><a href="/file-formats/installation-and-deployment/upgrade-from-trial-version-to-license-version ">Upgrade from trial version to license version</a></li>
+		    <li><a href="/file-formats/installation-and-upgrade/install-using-the-web-installer ">Install using the Web Installer</a></li>			
+		    <li><a href="/file-formats/installation-and-upgrade/install-using-the-offline-installer ">Install using the Offline Installer</a></li>
+			<li><a href="/file-formats/installation-and-upgrade/installation-faq ">Installation FAQ</a></li>
+			<li><a href="/file-formats/installation-and-upgrade/upgrade-from-one-version-to-another-version">Upgrade from one version to another version</a></li>
+			<li><a href="/file-formats/installation-and-upgrade/upgrade-from-major-version-to-service-pack-version">Upgrade from major version to service pack version</a></li>
+			<li><a href="/file-formats/installation-and-upgrade/upgrade-from-trial-version-to-license-version ">Upgrade from trial version to license version</a></li>
 		</ul>
 	</li>
 	<li>
