--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -161,6 +161,7 @@
         <ul>
             <li><a href="/file-formats/pdf/overview">Overview</a></li>
             <li><a href="/file-formats/pdf/Assemblies-Required">Assemblies Required</a></li>
+            <li><a href="/file-formats/pdf/NuGet-Packages-Required">NuGet Packages Required</a></li>
             <li><a href="/file-formats/pdf/getting-started">Getting Started</a></li>
             <li><a href="/file-formats/pdf/Loading-and-Saving-document">Loading and Saving Document</a></li>
             <li><a href="/file-formats/pdf/working-with-asp">ASP.NET</a></li>
