--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -350,6 +350,7 @@
     <li>
         Release Notes
         <ul>
+		<li><a href="/file-formats/release-notes/v16.2.0.50">v16.2.0.50</a></li>
 		<li><a href="/file-formats/release-notes/v16.2.0.46">v16.2.0.46</a></li>
 		<li><a href="/file-formats/release-notes/v16.2.0.41">v16.2.0.41</a></li>
         <li><a href="/file-formats/release-notes/v16.1.0.37">v16.1.0.37</a></li>  
