--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -271,6 +271,9 @@
 			<li>
                 <a href="/file-formats/Presentation/Working-with-Animation">Working with Animation</a>
             </li>
+			<li>
+                <a href="/file-formats/Presentation/create-edit-slide-transitions-in-powerpoint-presentation-slides-c#-.net">Working with Slide transitions</a>
+            </li>
             <li>
                 <a href="/file-formats/Presentation/Working-with-NotesSlide">Working with Notes</a>
             </li>
