[WF]WF-45547-UG Documentation for PDF Redaction support

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -194,6 +194,7 @@
             <li><a href="/file-formats/pdf/working-with-annotations">Working with Annotations</a></li>
             <li><a href="/file-formats/pdf/working-with-attachments">Working with Attachments</a></li>
             <li><a href="/file-formats/pdf/working-with-security">Working with Security</a></li>
+            <li><a href="/file-formats/pdf/Working-with-Redaction">Working with Redaction</a></li>
             <li><a href="/file-formats/pdf/working-with-digitalsignature">Working with Digital Signature</a></li>
             <li><a href="/file-formats/pdf/working-with-barcode">Working with Barcode</a></li>
             <li><a href="/file-formats/pdf/working-with-action">Working with Actions</a></li>
