--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -272,7 +272,7 @@
                 <a href="/file-formats/Presentation/Working-with-Animation">Working with Animation</a>
             </li>
 			<li>
-                <a href="/file-formats/Presentation/create-edit-slide-transitions-in-powerpoint-presentation-slides-c#-.net">Working with slide transitions</a>
+                <a href="/file-formats/Presentation/create-edit-slide-transitions-in-powerpoint-presentation-slides-cs-.net">Working with slide transitions</a>
             </li>
             <li>
                 <a href="/file-formats/Presentation/Working-with-NotesSlide">Working with Notes</a>
