EJDOTNETCORE-946 Loading and saving PDF document in ASP.NET Core WF-4214 Add information about page label property with code snippet WF-42689 Need to add information about MeasureString method

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -171,6 +171,7 @@
             <li><a href="/file-formats/pdf/working-with-windows-phone">Windows Phone</a></li>
 			<li><a href="/file-formats/pdf/UWP">UWP</a></li>
             <li><a href="/file-formats/pdf/working-with-xamarin">Xamarin</a></li>
+            <li><a href="/file-formats/pdf/asp-net-core">ASP.NET Core</a></li>
             <li><a href="/file-formats/pdf/working-with-document">Working with Document</a></li>
             <li><a href="/file-formats/pdf/working-with-pages">Working with Pages</a></li>
             <li><a href="/file-formats/pdf/working-with-text">Working with Text</a></li>
