DOCINFRA-1894 Nuget package release v16.3.0.30 release notes file is committed

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -356,6 +356,7 @@
      <li>
         Release Notes
         <ul>
+		<li><a href="/file-formats/release-notes/v16.3.0.35">v16.3.0.35</a></li>
 		<li><a href="/file-formats/release-notes/v16.3.0.29">v16.3.0.29</a></li>
 		<li><a href="/file-formats/release-notes/v16.3.0.21">v16.3.0.21</a></li>
         <li><a href="/file-formats/release-notes/v16.3.0.17">v16.3.0.17</a></li>
