--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -358,6 +358,7 @@
      <li>
         Release Notes
         <ul>
+		<li><a href="/file-formats/release-notes/v16.3.0.36">v16.3.0.36</a></li>
 		<li><a href="/file-formats/release-notes/v16.3.0.35">v16.3.0.35</a></li>
 		<li><a href="/file-formats/release-notes/v16.3.0.29">v16.3.0.29</a></li>
 		<li><a href="/file-formats/release-notes/v16.3.0.21">v16.3.0.21</a></li>
