WF-40528 Need to include detailed usage explanation in Grid(Spacing, Padding, Span, Overflow, etc WF-40402 Need to include OnInstantiate action to Pdf3DAnnotation WF-40529 Need to include JavaScript block in UG documentation

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -208,7 +208,8 @@
             <li><a href="/file-formats/pdf/working-with-compression">Working with Compression</a></li>
             <li><a href="/file-formats/pdf/Working-with-PDF-Conformance">Working with PDF Conformance</a></li>
             <li><a href="/file-formats/pdf/working-with-metadata">Working with Metadata</a></li>
-            <li><a href="/file-formats/pdf/working-with-colorspace">Working with Color Spaces</a></li>			
+            <li><a href="/file-formats/pdf/working-with-colorspace">Working with Color Spaces</a></li>	
+            <li><a href="/file-formats/pdf/working-with-JavaSctipt">Working with JavaScript</a></li>			
             <li><a href="/file-formats/pdf/Supported-and-Unsupported-Features">Supported and Unsupported Features</a></li>
         </ul>
     </li>
