--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -278,6 +278,9 @@
 			<li>
                 <a href="/file-formats/Presentation/create-edit-slide-transitions-in-powerpoint-presentation-slides-cs-vb-net">Working with slide transitions</a>
             </li>
+			<li>
+                <a href="/file-formats/Presentation/create-edit-connectors-in-powerpoint-slides-cs-vb-net">Working with connectors</a>
+            </li>
             <li>
                 <a href="/file-formats/Presentation/Working-with-NotesSlide">Working with Notes</a>
             </li>
