DOCINFRA-1912 added release notes for main volume release v16.4.0.42

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -361,7 +361,8 @@
     </li>
      <li>
         Release Notes
-        <ul>		
+        <ul>	
+        <li><a href="/file-formats/release-notes/v16.4.0.42">v16.4.0.42</a></li>		
         <li><a href="/file-formats/release-notes/v16.4.0.40">v16.4.0.40</a></li>
 		<li><a href="/file-formats/release-notes/v16.3.0.36">v16.3.0.36</a></li>
 		<li><a href="/file-formats/release-notes/v16.3.0.35">v16.3.0.35</a></li>
