--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -407,6 +407,8 @@
 			<li><a href="/file-formats/release-notes/v13.3.0.7">v13.3.0.7</a></li>
 			<li><a href="/file-formats/release-notes/v13.2.0.29">v13.2.0.29</a></li>
 			<li><a href="/file-formats/release-notes/v13.1.0.21">v13.1.0.21</a></li>
+			<li><a href="/file-formats/release-notes/v12.4.0.24">v12.4.0.24</a></li>
+			<li><a href="/file-formats/release-notes/v12.3.0.36">v12.3.0.36</a></li>
         </ul>
     </li>
 </ul>
