DOCINFRA-1935 added the node in the TOC.html file  for the release notes version v16.4.0.47

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -368,6 +368,7 @@
      <li>
         Release Notes
         <ul>	
+		<li><a href="/file-formats/release-notes/v16.4.0.47">v16.4.0.47</a></li>
 		<li><a href="/file-formats/release-notes/v16.4.0.46">v16.4.0.46</a></li>
 		<li><a href="/file-formats/release-notes/v16.4.0.44">v16.4.0.44</a></li>
         <li><a href="/file-formats/release-notes/v16.4.0.42">v16.4.0.42</a></li>		
