WF-47872 - Migration from Office Automation to Syncfusion XlsIO

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -326,7 +326,7 @@
         <ul>
             <li><a href="/file-formats/xlsio/overview">Overview</a></li>
             <li><a href="/file-formats/xlsio/assemblies-required">Assemblies Required</a></li>
-			<li><a href="/file-formats/xlsio/NuGet-Packages-Required">NuGet Packages Required</a></li>
+            <li><a href="/file-formats/xlsio/NuGet-Packages-Required">NuGet Packages Required</a></li>
             <li><a href="/file-formats/xlsio/getting-started">Getting Started</a></li>
             <li><a href="/file-formats/xlsio/loading-and-saving-workbook">Loading and Saving Workbook</a></li>
             <li><a href="/file-formats/xlsio/asp-net">ASP.NET</a></li>
@@ -336,7 +336,7 @@
             <li><a href="/file-formats/xlsio/windows-phone">Windows Phone</a></li>
             <li><a href="/file-formats/xlsio/uwp">UWP</a></li>
             <li><a href="/file-formats/xlsio/xamarin">Xamarin</a></li>
-			<li><a href="/file-formats/xlsio/asp-net-core">ASP.NET Core</a></li>
+            <li><a href="/file-formats/xlsio/asp-net-core">ASP.NET Core</a></li>
             <li><a href="/file-formats/xlsio/working-with-excel-worksheet">Working with Excel Worksheet</a></li>
             <li><a href="/file-formats/xlsio/worksheet-rows-and-columns-manipulation">Worksheet Rows and Columns Manipulation</a></li>
             <li><a href="/file-formats/xlsio/worksheet-cells-manipulation">Worksheet Cells Manipulation</a></li>
@@ -353,15 +353,39 @@
             <li><a href="/file-formats/xlsio/working-with-pivot-charts">Working with Pivot Charts</a></li>
             <li><a href="/file-formats/xlsio/security">Security</a></li>
             <li><a href="/file-formats/xlsio/working-with-drawing-objects">Working with Drawing Objects</a></li>
-			<li><a href="/File-Formats/XlsIO/Excel-to-PDF-Conversion">Excel to PDF Conversion</a></li>
-			<li><a href="/file-formats/xlsio/worksheet-to-image-conversion">Worksheet to Image Conversion</a></li>
-			<li><a href="/file-formats/xlsio/chart-to-image-conversion">Chart to Image Conversion</a></li>
-			<li><a href="/file-formats/xlsio/excel-to-ods-conversion">Excel to ODS Conversion</a></li>
+            <li><a href="/File-Formats/XlsIO/Excel-to-PDF-Conversion">Excel to PDF Conversion</a></li>
+            <li><a href="/file-formats/xlsio/worksheet-to-image-conversion">Worksheet to Image Conversion</a></li>
+            <li><a href="/file-formats/xlsio/chart-to-image-conversion">Chart to Image Conversion</a></li>
+            <li><a href="/file-formats/xlsio/excel-to-ods-conversion">Excel to ODS Conversion</a></li>
             <li><a href="/file-formats/xlsio/custom-xml-support">Custom XML Support</a></li>
             <li><a href="/file-formats/xlsio/supported-features-by-file-formats">Supported Features by File Formats</a></li>
-			<li><a href="/file-formats/xlsio/supported-features-by-platforms">Supported Features by Platforms</a></li>
+            <li><a href="/file-formats/xlsio/supported-features-by-platforms">Supported Features by Platforms</a></li>
             <li><a href="/file-formats/xlsio/improving-performance">Improving Performance</a></li>
-			<li><a href="/file-formats/xlsio/known-exceptions">Known Exceptions</a></li>
+            <li><a href="/file-formats/xlsio/known-exceptions">Known Exceptions</a></li>
+            <li>
+                <a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio">Migration from Office Automation to Syncfusion XlsIO</a>
+                <ul>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/add-worksheets-to-workbook">Add Worksheets to Workbook</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/activate-a-worksheet">Activate a Worksheet</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/protect-excel-workbook">Protect Excel Workbook</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/unprotect-excel-workbook">Unprotect Excel Workbook</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/create-pie-chart-in-excel">Create Pie Chart in Excel</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/use-formulas-in-excel">Use Formulas in Excel</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/create-named-range-in-excel">Create Named Range in Excel</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/add-comments-in-excel">Add Comments in Excel</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/delete-comments-in-excel">Delete Comments in Excel</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/merge-cells-in-excel">Merge Cells in Excel</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/unmerge-cells-in-excel">Unmerge Cells in Excel</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/apply-borders-in-excel">Apply Borders in Excel</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/add-hyperlinks-in-excel">Add Hyperlinks in Excel</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/hide-excel-worksheets">Hide Excel Worksheets</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/unhide-excel-worksheets">Unhide Excel Worksheets</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/rotate-text-in-cells">Rotate Text in Cells</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/filter-excel-data">Filter Excel Data</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/wrap-text-in-excel">Wrap Text in Excel</a></li>
+                    <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio/set-background-for-excel-worksheet">Set Background for Excel Worksheet</a></li>
+                </ul>
+            </li>
             <li><a href="/file-formats/xlsio/faq">FAQ</a></li>
         </ul>
     </li>
