--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -362,9 +362,7 @@
             <li><a href="/file-formats/xlsio/supported-features-by-platforms">Supported Features by Platforms</a></li>
             <li><a href="/file-formats/xlsio/improving-performance">Improving Performance</a></li>
             <li><a href="/file-formats/xlsio/known-exceptions">Known Exceptions</a></li>
-            <li>
-                <a href="/file-formats/xlsio/Migration-from-Office-Automation-to-Syncfusion-XlsIO">Migration from Office Automation to Syncfusion XlsIO</a>                
-            </li>
+            <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio">Migration from Office Automation to Syncfusion XlsIO</a></li>
             <li><a href="/file-formats/xlsio/faq">FAQ</a></li>
         </ul>
     </li>
