--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -363,7 +363,8 @@
             <li><a href="/file-formats/xlsio/improving-performance">Improving Performance</a></li>
             <li><a href="/file-formats/xlsio/known-exceptions">Known Exceptions</a></li>
             <li><a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio">Migration from Office Automation to Syncfusion XlsIO</a></li>
-            <li><a href="/file-formats/xlsio/faq">FAQ</a></li>
+            <li><a href="/file-formats/xlsio/new">new</a></li>
+			<li><a href="/file-formats/xlsio/faq">FAQ</a></li>
         </ul>
     </li>
      <li>
