--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -336,7 +336,7 @@
             <li><a href="/file-formats/xlsio/windows-phone">Windows Phone</a></li>
             <li><a href="/file-formats/xlsio/uwp">UWP</a></li>
             <li><a href="/file-formats/xlsio/xamarin">Xamarin</a></li>
-            <li><a href="/file-formats/xlsio/asp-net-core">ASP.NET Core</a></li>
+            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-core-c#">ASP.NET Core</a></li>
             <li><a href="/file-formats/xlsio/working-with-excel-worksheet">Working with Excel Worksheet</a></li>
             <li><a href="/file-formats/xlsio/worksheet-rows-and-columns-manipulation">Worksheet Rows and Columns Manipulation</a></li>
             <li><a href="/file-formats/xlsio/worksheet-cells-manipulation">Worksheet Cells Manipulation</a></li>
