UWP-9602 Add Getting Started section to UWP platform UG page

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -334,7 +334,7 @@
             <li><a href="/file-formats/xlsio/silverlight">Silverlight</a></li>
             <li><a href="/file-formats/xlsio/winrt">WinRT</a></li>
             <li><a href="/file-formats/xlsio/windows-phone">Windows Phone</a></li>
-            <li><a href="/file-formats/xlsio/uwp">UWP</a></li>
+            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-uwp-c-sharp">UWP</a></li>
             <li><a href="/file-formats/xlsio/xamarin">Xamarin</a></li>
             <li><a href="/file-formats/xlsio/asp-net-core">ASP.NET Core</a></li>
             <li><a href="/file-formats/xlsio/working-with-excel-worksheet">Working with Excel Worksheet</a></li>
