--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -249,6 +249,12 @@
             <li>
                 <a href="/file-formats/Presentation/create-read-edit-powerpoint-files-in-uwp">UWP</a>
             </li>
+			<li>
+                <a href="/file-formats/Presentation/create-read-edit-powerpoint-files-in-windows-forms">Windows Forms</a>
+            </li>
+			<li>
+                <a href="/file-formats/Presentation/create-read-edit-powerpoint-files-in-wpf">WPF</a>
+            </li>
             <li>
                 <a href="/file-formats/Presentation/create-read-edit-powerpoint-files-in-xamarin">Xamarin</a>
             </li>
