--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -14,12 +14,12 @@
 	<li>
        Installation and Upgrade
 	    <ul>
-		    <li><a href="/file-formats/installation-and-upgrade/install-using-the-web-installer ">Install using the Web Installer</a></li>			
-		    <li><a href="/file-formats/installation-and-upgrade/install-using-the-offline-installer ">Install using the Offline Installer</a></li>
-			<li><a href="/file-formats/installation-and-upgrade/installation-faq ">Installation FAQ</a></li>
+		    <li><a href="/file-formats/installation-and-upgrade/install-using-the-web-installer">Install using the Web Installer</a></li>			
+		    <li><a href="/file-formats/installation-and-upgrade/install-using-the-offline-installer">Install using the Offline Installer</a></li>
+			<li><a href="/file-formats/installation-and-upgrade/installation-faq">Installation FAQ</a></li>
 			<li><a href="/file-formats/installation-and-upgrade/upgrade-from-one-version-to-another-version">Upgrade from one version to another version</a></li>
 			<li><a href="/file-formats/installation-and-upgrade/upgrade-from-major-version-to-service-pack-version">Upgrade from major version to service pack version</a></li>
-			<li><a href="/file-formats/installation-and-upgrade/upgrade-from-trial-version-to-license-version ">Upgrade from trial version to license version</a></li>
+			<li><a href="/file-formats/installation-and-upgrade/upgrade-from-trial-version-to-license-version">Upgrade from trial version to license version</a></li>
 		</ul>
 	</li>
 	<li>
@@ -329,14 +329,14 @@
 			<li><a href="/file-formats/xlsio/NuGet-Packages-Required">NuGet Packages Required</a></li>
             <li><a href="/file-formats/xlsio/getting-started">Getting Started</a></li>
             <li><a href="/file-formats/xlsio/loading-and-saving-workbook">Loading and Saving Workbook</a></li>
-            <li><a href="/file-formats/xlsio/asp-net">ASP.NET</a></li>
-            <li><a href="/file-formats/xlsio/asp-net-mvc">ASP.NET MVC</a></li>
+            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-c-sharp">ASP.NET</a></li>
+            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-mvc-c-sharp">ASP.NET MVC</a></li>
             <li><a href="/file-formats/xlsio/silverlight">Silverlight</a></li>
             <li><a href="/file-formats/xlsio/winrt">WinRT</a></li>
             <li><a href="/file-formats/xlsio/windows-phone">Windows Phone</a></li>
-            <li><a href="/file-formats/xlsio/uwp">UWP</a></li>
-            <li><a href="/file-formats/xlsio/xamarin">Xamarin</a></li>
-			<li><a href="/file-formats/xlsio/asp-net-core">ASP.NET Core</a></li>
+            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-uwp-c-sharp">UWP</a></li>
+            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-xamarin-c-sharp">Xamarin</a></li>
+            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-core-c-sharp">ASP.NET Core</a></li>
             <li><a href="/file-formats/xlsio/working-with-excel-worksheet">Working with Excel Worksheet</a></li>
             <li><a href="/file-formats/xlsio/worksheet-rows-and-columns-manipulation">Worksheet Rows and Columns Manipulation</a></li>
             <li><a href="/file-formats/xlsio/worksheet-cells-manipulation">Worksheet Cells Manipulation</a></li>
