WF-48503 - Add getting started for ASP.NET Core   Added the getting started page for ASP.NET Core in DocIO UG documentation.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -52,6 +52,9 @@
             <li>
                 <a href="/file-formats/DocIO/ASP-NET-MVC">ASP.NET MVC</a>
             </li>
+			<li>
+                <a href="/file-formats/DocIO/ASP-NET-Core">ASP.NET Core</a>
+            </li>
             <li>
                 <a href="/file-formats/DocIO/Silverlight">Silverlight</a>
             </li>
